# openapi_inspect_script

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  openapi_inspect.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  release.yml  test.yml
tests/: test_openapi_inspect.py
